# nativeModule-RNV

./: App.tsx  README.md  app.json  package-lock.json  package.json
android/: build.gradle  settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/v2rayapp/: MainActivity.kt  MainApplication.kt  V2RayModule.kt  V2RayPackage.kt
android/app/src/main/res/values/: strings.xml
ios/: Podfile
ios/V2RayApp/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/V2RayApp.xcodeproj/: project.pbxproj
ios/V2RayApp.xcodeproj/xcshareddata/xcschemes/: V2RayApp.xcscheme
